--- a/compiled/examples/manifests/logstash-bundle.yml
+++ b/compiled/examples/manifests/logstash-bundle.yml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: logstash
+    name: logstash
   name: logstash
   namespace: examples
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: logstash
+      name: logstash
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        app: logstash
+        name: logstash
     spec:
       affinity:
         podAntiAffinity:
