--- a/compiled/examples/manifests/mysql-bundle.yml
+++ b/compiled/examples/manifests/mysql-bundle.yml
@@ -4,19 +4,19 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: mysql
+    name: mysql
   name: mysql
   namespace: examples
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mysql
+      name: mysql
   serviceName: mysql
   template:
     metadata:
       labels:
-        app: mysql
+        name: mysql
     spec:
       containers:
         - env:
