--- a/compiled/dev-sockshop/manifests/orders-bundle.yml
+++ b/compiled/dev-sockshop/manifests/orders-bundle.yml
@@ -4,16 +4,16 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: orders
     app.kubernetes.io/part-of: sock-shop
+    name: orders
   name: orders
   namespace: dev-sockshop
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: orders
       app.kubernetes.io/part-of: sock-shop
+      name: orders
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -22,8 +22,8 @@ spec:
   template:
     metadata:
       labels:
-        app: orders
         app.kubernetes.io/part-of: sock-shop
+        name: orders
     spec:
       containers:
         - env:
@@ -82,8 +82,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: orders
     app.kubernetes.io/part-of: sock-shop
+    name: orders
   name: orders
   namespace: dev-sockshop
 spec:
@@ -93,7 +93,7 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: orders
     app.kubernetes.io/part-of: sock-shop
+    name: orders
   sessionAffinity: None
   type: ClusterIP
