--- a/compiled/gke-pvm-killer/manifests/gke-pvm-killer-bundle.yml
+++ b/compiled/gke-pvm-killer/manifests/gke-pvm-killer-bundle.yml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: gke-pvm-killer
+    name: gke-pvm-killer
   name: gke-pvm-killer
   namespace: gke-pvm-killer
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: gke-pvm-killer
+      name: gke-pvm-killer
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        app: gke-pvm-killer
+        name: gke-pvm-killer
     spec:
       containers:
         - env:
