--- a/compiled/pritunl/manifests/pritunl-bundle.yml
+++ b/compiled/pritunl/manifests/pritunl-bundle.yml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: pritunl
+    name: pritunl
   name: pritunl
   namespace: pritunl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: pritunl
+      name: pritunl
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        app: pritunl
+        name: pritunl
     spec:
       containers:
         - image: alledm/pritunl
@@ -75,7 +75,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: pritunl
+    name: pritunl
   name: pritunl
   namespace: pritunl
 spec:
@@ -93,6 +93,6 @@ spec:
       protocol: TCP
       targetPort: webui
   selector:
-    app: pritunl
+    name: pritunl
   sessionAffinity: None
   type: LoadBalancer
