--- a/compiled/prod-sockshop/manifests/shipping-bundle.yml
+++ b/compiled/prod-sockshop/manifests/shipping-bundle.yml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: shipping
+    name: shipping
   name: shipping
   namespace: prod-sockshop
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: shipping
+      name: shipping
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        app: shipping
+        name: shipping
     spec:
       containers:
         - env:
@@ -78,7 +78,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: shipping
+    name: shipping
   name: shipping
   namespace: prod-sockshop
 spec:
@@ -88,6 +88,6 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: shipping
+    name: shipping
   sessionAffinity: None
   type: ClusterIP
