--- a/compiled/sock-shop/manifests/carts-bundle.yml
+++ b/compiled/sock-shop/manifests/carts-bundle.yml
@@ -4,16 +4,16 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: carts
     app.kubernetes.io/part-of: sock-shop
+    name: carts
   name: carts
   namespace: sock-shop
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: carts
       app.kubernetes.io/part-of: sock-shop
+      name: carts
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -22,8 +22,8 @@ spec:
   template:
     metadata:
       labels:
-        app: carts
         app.kubernetes.io/part-of: sock-shop
+        name: carts
     spec:
       containers:
         - env:
@@ -82,8 +82,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: carts
     app.kubernetes.io/part-of: sock-shop
+    name: carts
   name: carts
   namespace: sock-shop
 spec:
@@ -93,7 +93,7 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: carts
     app.kubernetes.io/part-of: sock-shop
+    name: carts
   sessionAffinity: None
   type: ClusterIP
