--- a/compiled/sock-shop/manifests/catalogue-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-bundle.yml
@@ -4,16 +4,16 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: catalogue
     app.kubernetes.io/part-of: sock-shop
+    name: catalogue
   name: catalogue
   namespace: sock-shop
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: catalogue
       app.kubernetes.io/part-of: sock-shop
+      name: catalogue
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -22,8 +22,8 @@ spec:
   template:
     metadata:
       labels:
-        app: catalogue
         app.kubernetes.io/part-of: sock-shop
+        name: catalogue
     spec:
       containers:
         - args:
@@ -73,8 +73,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: catalogue
     app.kubernetes.io/part-of: sock-shop
+    name: catalogue
   name: catalogue
   namespace: sock-shop
 spec:
@@ -84,7 +84,7 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: catalogue
     app.kubernetes.io/part-of: sock-shop
+    name: catalogue
   sessionAffinity: None
   type: ClusterIP
