--- a/compiled/sock-shop/manifests/user-bundle.yml
+++ b/compiled/sock-shop/manifests/user-bundle.yml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: user
+    name: user
   name: user
   namespace: sock-shop
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: user
+      name: user
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        app: user
+        name: user
     spec:
       containers:
         - env:
@@ -75,7 +75,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: user
+    name: user
   name: user
   namespace: sock-shop
 spec:
@@ -85,6 +85,6 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: user
+    name: user
   sessionAffinity: None
   type: ClusterIP
