--- a/compiled/tutorial/manifests/echo-server-bundle.yml
+++ b/compiled/tutorial/manifests/echo-server-bundle.yml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     manifests.kapicorp.com/generated: 'true'
   labels:
-    app: echo-server
+    name: echo-server
   name: echo-server
   namespace: tutorial
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: echo-server
+      name: echo-server
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       labels:
-        app: echo-server
+        name: echo-server
     spec:
       containers:
         - env:
@@ -66,7 +66,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: echo-server
+    name: echo-server
   name: echo-server
   namespace: tutorial
 spec:
@@ -76,6 +76,6 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: echo-server
+    name: echo-server
   sessionAffinity: None
   type: LoadBalancer
