--- a/inventory/targets/examples/tutorial.yml
+++ b/inventory/targets/examples/tutorial.yml
@@ -3,6 +3,7 @@ classes:
   - projects.localhost.kubernetes.kind
   - applications.microservices
   - components.echo-server
+  - features.tesoro
 
 
 parameters:
