do not double encode secrets

--- a/compiled/tutorial/manifests/echo-server-secret.yml
+++ b/compiled/tutorial/manifests/echo-server-secret.yml
@@ -8,5 +8,5 @@ metadata:
   namespace: tutorial
 stringData:
   better_secret: ?{base64:eyJkYXRhIjogIlpXMVdRazlYWkdsVE1tTjNWV3BDYlZkSWJGbGlWamxtVVZaQk5VOUZNVlppTVdkNFZFUmtTMkZ1VWpWT1ZHaEVWVlZ3UTJWR1dqVmFkejA5IiwgImVuY29kaW5nIjogImJhc2U2NCIsICJ0eXBlIjogImJhc2U2NCJ9:embedded}
-  encoded_secret: bXlfc2VjcmV0
+  encoded_secret: my_secret
 type: Opaque
