--- a/compiled/echo-server/manifests/echo-server-bundle.yml
+++ b/compiled/echo-server/manifests/echo-server-bundle.yml
@@ -30,6 +30,9 @@ spec:
             - containerPort: 8080
               name: http
               protocol: TCP
+            - containerPort: 8081
+              name: internal
+              protocol: TCP
           readinessProbe:
             failureThreshold: 3
             httpGet:
