--- a/inventory/classes/components/echo-server.yml
+++ b/inventory/classes/components/echo-server.yml
@@ -15,6 +15,8 @@ parameters:
         http:
           service_port: 80
           container_port: 8080
+        internal:
+          container_port: 8081
       secrets:
         secret:
           data:
