--- a/inventory/classes/components/weaveworks/carts.yml
+++ b/inventory/classes/components/weaveworks/carts.yml
@@ -17,12 +17,18 @@ parameters:
           add:
             - NET_BIND_SERVICE
       healthcheck:
-        type: http
-        port: http
-        probes: ['readiness', 'liveness']
-        path: /health
-        initial_delay_seconds: 120
-        timeout_seconds: 3
+        readiness:
+          type: http
+          port: http
+          path: /health
+          initial_delay_seconds: 120
+          timeout_seconds: 3
+        liveness:
+          type: http
+          port: http
+          path: /health
+          initial_delay_seconds: 120
+          timeout_seconds: 3
       env:
         ZIPKIN: zipkin.jaeger.svc.cluster.local
         JAVA_OPTS: "-Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom"
