--- a/inventory/classes/components/weaveworks/shipping.yml
+++ b/inventory/classes/components/weaveworks/shipping.yml
@@ -16,12 +16,17 @@ parameters:
           add:
             - NET_BIND_SERVICE
       healthcheck:
-        type: http
-        port: http
-        probes: ['readiness', 'liveness']
-        path: /health
-        timeout_seconds: 3
-        initial_delay_seconds: 120
+        readiness:
+          type: http
+          port: http
+          path: /health
+          timeout_seconds: 3
+          initial_delay_seconds: 120
+        liveness:
+          type: http
+          port: http
+          path: /health
+          timeout_seconds: 5
       env:
         ZIPKIN: zipkin.jaeger.svc.cluster.local
         JAVA_OPTS: "-Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom"
