--- a/compiled/echo-server/manifests/echo-server-bundle.yml
+++ b/compiled/echo-server/manifests/echo-server-bundle.yml
@@ -25,6 +25,16 @@ spec:
       containers:
         - image: jmalloc/echo-server
           imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /_health
+              port: http
+              scheme: HTTP
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 3
           name: echo-server
           ports:
             - containerPort: 8080
@@ -36,13 +46,13 @@ spec:
           readinessProbe:
             failureThreshold: 3
             httpGet:
-              path: /_health
+              path: /_ready
               port: http
               scheme: HTTP
             initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
-            timeoutSeconds: 3
+            timeoutSeconds: 5
           volumeMounts:
             - mountPath: /opt/echo-service
               name: config
