--- a/inventory/classes/components/logstash.yml
+++ b/inventory/classes/components/logstash.yml
@@ -9,21 +9,21 @@ parameters:
         http:
           container_port: 9600
       healthcheck:
-        type: http
-        port: 9600
-        probes: ['readiness']
-        path: /
-        timeout_seconds: 3
+        readiness:
+          type: http
+          port: 9600
+          path: /
+          timeout_seconds: 3
       image: eu.gcr.io/antha-images/logstash:7.5.1
       config_maps:
         config:
           mount: /usr/share/logstash/config/
           data:
             logstash.yml:
-              template: components/logstash/templates/logstash.yml.j2 
+              template: components/logstash/templates/logstash.yml.j2
               values: {}
             pipelines.yml:
-              template: components/logstash/templates/pipelines.yml.j2 
+              template: components/logstash/templates/pipelines.yml.j2
               values: {}
         pipelines:
           mount: /usr/share/logstash/pipeline/
