--- a/inventory/classes/components/weaveworks/queue-master.yml
+++ b/inventory/classes/components/weaveworks/queue-master.yml
@@ -9,11 +9,16 @@ parameters:
         http:
           service_port: 80
       healthcheck:
-        type: http
-        port: http
-        probes: ['readiness', 'liveness']
-        path: /health
-        timeout_seconds: 3
+        readiness:
+          type: http
+          port: http
+          path: /health
+          timeout_seconds: 3
+        liveness:
+          type: http
+          port: http
+          path: /health
+          timeout_seconds: 5
       env:
         ZIPKIN: zipkin.jaeger.svc.cluster.local
         JAVA_OPTS: "-Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom"
