--- a/compiled/tutorial/manifests/echo-server-bundle.yml
+++ b/compiled/tutorial/manifests/echo-server-bundle.yml
@@ -31,6 +31,9 @@ spec:
           livenessProbe:
             failureThreshold: 3
             httpGet:
+              httpHeaders:
+                - name: Host
+                  value: www.google.com
               path: /_health
               port: http
               scheme: HTTP
