Import from synthace upstream version (#38)
* update with upstream version from synthace

* add example workload_security_context

* add prometheus rules example

* add probe header example

* added pull_policy example

--- a/compiled/echo-server/manifests/echo-server-bundle.yml
+++ b/compiled/echo-server/manifests/echo-server-bundle.yml
@@ -24,10 +24,13 @@ spec:
     spec:
       containers:
         - image: jmalloc/echo-server
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           livenessProbe:
             failureThreshold: 3
             httpGet:
+              httpHeaders:
+                - name: Host
+                  value: www.google.com
               path: /_health
               port: http
               scheme: HTTP
