--- a/inventory/classes/components/echo-server.yml
+++ b/inventory/classes/components/echo-server.yml
@@ -3,12 +3,16 @@ parameters:
     echo-server:
       application: microservices
       image: jmalloc/echo-server
+      pull_policy: Always
       service:
         type: LoadBalancer
       healthcheck:
         liveness:
           type: http
           port: http
+          httpHeaders:
+          - name: Host
+            value: www.google.com
           path: /_health
           timeout_seconds: 3
         readiness:
