--- a/compiled/echo-server/manifests/echo-server-bundle.yml
+++ b/compiled/echo-server/manifests/echo-server-bundle.yml
@@ -60,12 +60,12 @@ spec:
             limits:
               memory: 1G
             requests:
-              hugepages-2Mi: 80Mi
               memory: 1G
           volumeMounts:
-            - mountPath: /opt/echo-service
+            - mountPath: /opt/echo-service/echo-service.conf
               name: config
               readOnly: true
+              subPath: echo-service.conf
         - image: nginx
           imagePullPolicy: IfNotPresent
           name: nginx
@@ -74,17 +74,15 @@ spec:
               name: nginx
               protocol: TCP
           volumeMounts:
-            - mountPath: /opt/echo-service
+            - mountPath: /etc/nginx/conf.d/nginx.conf
               name: config
               readOnly: true
+              subPath: nginx.conf
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
         - configMap:
             defaultMode: 420
-            items:
-              - key: echo-service.conf
-                path: echo-service.conf
             name: echo-server
           name: config
         - name: secret
