--- a/compiled/tutorial/manifests/echo-server-bundle.yml
+++ b/compiled/tutorial/manifests/echo-server-bundle.yml
@@ -111,23 +111,23 @@ spec:
   sessionAffinity: None
   type: LoadBalancer
 ---
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  labels:
+- apiVersion: networking.k8s.io/v1
+  kind: NetworkPolicy
+  metadata:
+    labels:
+      name: echo-server
     name: echo-server
-  name: echo-server
-spec:
-  ingress:
-    - from:
-        - podSelector:
-            matchLabels:
-              role: frontend
-      ports:
-        - port: 6379
-          protocol: TCP
-  podSelector:
-    label: test
-  policyTypes:
-    - Ingress
-    - Egress
+  spec:
+    ingress:
+      - from:
+          - podSelector:
+              matchLabels:
+                role: frontend
+        ports:
+          - port: 6379
+            protocol: TCP
+    podSelector:
+      label: test
+    policyTypes:
+      - Ingress
+      - Egress
