--- a/inventory/classes/kapitan/common.yml
+++ b/inventory/classes/kapitan/common.yml
@@ -1,8 +1,8 @@
 classes:
   - kapitan.kube
   - kapitan.spinnaker
-  - kapitan.generators.manifests
   - kapitan.generators.ingresses
+  - kapitan.generators.kubernetes
 
 parameters:
   scripts: []
