--- a/compiled/dev-sockshop/manifests/orders-bundle.yml
+++ b/compiled/dev-sockshop/manifests/orders-bundle.yml
@@ -85,7 +85,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: orders
   name: orders
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: http
