--- a/compiled/dev-sockshop/manifests/payment-bundle.yml
+++ b/compiled/dev-sockshop/manifests/payment-bundle.yml
@@ -72,7 +72,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: payment
   name: payment
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: http
