--- a/compiled/postgres-proxy/manifests/postgres-proxy-secret.yml
+++ b/compiled/postgres-proxy/manifests/postgres-proxy-secret.yml
@@ -6,5 +6,5 @@ metadata:
   labels:
     name: postgres-proxy
   name: postgres-proxy
-  namespace: postgres-proxy
+  namespace: echo-server
 type: Opaque
