--- a/compiled/pritunl/manifests/pritunl-mongo-secret.yml
+++ b/compiled/pritunl/manifests/pritunl-mongo-secret.yml
@@ -6,5 +6,5 @@ metadata:
   labels:
     name: pritunl-mongo
   name: pritunl-mongo
-  namespace: pritunl
+  namespace: gke-pvm-killer
 type: Opaque
