--- a/compiled/sock-shop/manifests/catalogue-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-bundle.yml
@@ -76,7 +76,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: catalogue
   name: catalogue
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: http
