--- a/compiled/sock-shop/manifests/payment-bundle.yml
+++ b/compiled/sock-shop/manifests/payment-bundle.yml
@@ -72,7 +72,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: payment
   name: payment
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: http
