--- a/compiled/sock-shop/manifests/rabbit-mq-bundle.yml
+++ b/compiled/sock-shop/manifests/rabbit-mq-bundle.yml
@@ -56,7 +56,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: rabbit-mq
   name: rabbit-mq
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: management
