--- a/compiled/dev-sockshop/manifests/carts-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/carts-db-bundle.yml
@@ -59,7 +59,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: carts-db
   name: carts-db
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: mongo
