--- a/compiled/dev-sockshop/manifests/catalogue-bundle.yml
+++ b/compiled/dev-sockshop/manifests/catalogue-bundle.yml
@@ -76,7 +76,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: catalogue
   name: catalogue
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: http
