--- a/compiled/dev-sockshop/manifests/catalogue-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/catalogue-db-bundle.yml
@@ -50,7 +50,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: catalogue-db
   name: catalogue-db
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: mysql
