--- a/compiled/dev-sockshop/manifests/queue-master-bundle.yml
+++ b/compiled/dev-sockshop/manifests/queue-master-bundle.yml
@@ -78,7 +78,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: queue-master
   name: queue-master
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: http
