--- a/compiled/dev-sockshop/manifests/session-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/session-db-bundle.yml
@@ -47,7 +47,7 @@ metadata:
   labels:
     name: session-db
   name: session-db
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: redis
