--- a/compiled/dev-sockshop/manifests/user-bundle.yml
+++ b/compiled/dev-sockshop/manifests/user-bundle.yml
@@ -77,7 +77,7 @@ metadata:
   labels:
     name: user
   name: user
-  namespace: dev-sockshop
+  namespace: echo-server
 spec:
   ports:
     - name: http
