--- a/compiled/pritunl/manifests/pritunl-bundle.yml
+++ b/compiled/pritunl/manifests/pritunl-bundle.yml
@@ -77,7 +77,7 @@ metadata:
   labels:
     name: pritunl
   name: pritunl
-  namespace: pritunl
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: http
