--- a/compiled/prod-sockshop/manifests/catalogue-db-bundle.yml
+++ b/compiled/prod-sockshop/manifests/catalogue-db-bundle.yml
@@ -50,7 +50,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: catalogue-db
   name: catalogue-db
-  namespace: prod-sockshop
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: mysql
