--- a/compiled/prod-sockshop/manifests/frontend-bundle.yml
+++ b/compiled/prod-sockshop/manifests/frontend-bundle.yml
@@ -73,7 +73,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: frontend
   name: frontend
-  namespace: prod-sockshop
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: http
