--- a/compiled/prod-sockshop/manifests/orders-bundle.yml
+++ b/compiled/prod-sockshop/manifests/orders-bundle.yml
@@ -85,7 +85,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: orders
   name: orders
-  namespace: prod-sockshop
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: http
