--- a/compiled/prod-sockshop/manifests/orders-db-bundle.yml
+++ b/compiled/prod-sockshop/manifests/orders-db-bundle.yml
@@ -59,7 +59,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: orders-db
   name: orders-db
-  namespace: prod-sockshop
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: mongo
