--- a/compiled/prod-sockshop/manifests/shipping-bundle.yml
+++ b/compiled/prod-sockshop/manifests/shipping-bundle.yml
@@ -80,7 +80,7 @@ metadata:
   labels:
     name: shipping
   name: shipping
-  namespace: prod-sockshop
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: http
