--- a/compiled/prod-sockshop/manifests/user-bundle.yml
+++ b/compiled/prod-sockshop/manifests/user-bundle.yml
@@ -77,7 +77,7 @@ metadata:
   labels:
     name: user
   name: user
-  namespace: prod-sockshop
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: http
