--- a/compiled/prod-sockshop/manifests/user-db-bundle.yml
+++ b/compiled/prod-sockshop/manifests/user-db-bundle.yml
@@ -54,7 +54,7 @@ metadata:
   labels:
     name: user-db
   name: user-db
-  namespace: prod-sockshop
+  namespace: gke-pvm-killer
 spec:
   ports:
     - name: mongo
