--- a/compiled/sock-shop/manifests/carts-bundle.yml
+++ b/compiled/sock-shop/manifests/carts-bundle.yml
@@ -85,7 +85,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: carts
   name: carts
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: http
