--- a/compiled/sock-shop/manifests/carts-db-bundle.yml
+++ b/compiled/sock-shop/manifests/carts-db-bundle.yml
@@ -59,7 +59,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: carts-db
   name: carts-db
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: mongo
