--- a/compiled/sock-shop/manifests/catalogue-db-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-db-bundle.yml
@@ -50,7 +50,7 @@ metadata:
     app.kubernetes.io/part-of: sock-shop
     name: catalogue-db
   name: catalogue-db
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: mysql
