--- a/compiled/sock-shop/manifests/session-db-bundle.yml
+++ b/compiled/sock-shop/manifests/session-db-bundle.yml
@@ -47,7 +47,7 @@ metadata:
   labels:
     name: session-db
   name: session-db
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: redis
