--- a/compiled/sock-shop/manifests/shipping-bundle.yml
+++ b/compiled/sock-shop/manifests/shipping-bundle.yml
@@ -80,7 +80,7 @@ metadata:
   labels:
     name: shipping
   name: shipping
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: http
