--- a/compiled/sock-shop/manifests/user-bundle.yml
+++ b/compiled/sock-shop/manifests/user-bundle.yml
@@ -77,7 +77,7 @@ metadata:
   labels:
     name: user
   name: user
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: http
