--- a/compiled/sock-shop/manifests/user-db-bundle.yml
+++ b/compiled/sock-shop/manifests/user-db-bundle.yml
@@ -54,7 +54,7 @@ metadata:
   labels:
     name: user-db
   name: user-db
-  namespace: sock-shop
+  namespace: examples
 spec:
   ports:
     - name: mongo
