--- a/compiled/tesoro/manifests/tesoro-bundle.yml
+++ b/compiled/tesoro/manifests/tesoro-bundle.yml
@@ -63,7 +63,7 @@ metadata:
   labels:
     name: tesoro
   name: tesoro
-  namespace: tesoro
+  namespace: global
 spec:
   ports:
     - name: tesoro-api
@@ -123,7 +123,7 @@ metadata:
   labels:
     name: tesoro-metrics
   name: tesoro-metrics
-  namespace: tesoro
+  namespace: global
 spec:
   endpoints:
     - interval: 15s
@@ -143,7 +143,7 @@ metadata:
   labels:
     name: tesoro.rules
   name: tesoro.rules
-  namespace: tesoro
+  namespace: global
 spec:
   groups:
     - name: tesoro.rules
