--- a/compiled/tutorial/manifests/echo-server-bundle.yml
+++ b/compiled/tutorial/manifests/echo-server-bundle.yml
@@ -99,7 +99,7 @@ metadata:
   labels:
     name: echo-server
   name: echo-server
-  namespace: tutorial
+  namespace: global
 spec:
   ports:
     - name: nginx
